--- a/Lingang.City.Brain/View/Industry/Estate/Left_First_01.html
+++ b/Lingang.City.Brain/View/Industry/Estate/Left_First_01.html
@@ -4,7 +4,7 @@
     <div class="divcont">
         <div class="chartdiv cyjzl-chartdiv" style="height: 6rem;">
             <div class="cyjzl-chart" id="cyjzl-chart"></div>
-            
+            <button class="chartzoomin" onclick="require('e_Echart').loadBigChart('Left_First_01')"></button>
         </div>
     </div>
 </div>
