--- a/Lingang.City.Brain/View/Industry/Estate/Left_Second_01.html
+++ b/Lingang.City.Brain/View/Industry/Estate/Left_Second_01.html
@@ -6,7 +6,7 @@
     <div class="divcont">
         <div class="chartdiv qybhqs-chartdiv">
             <div class="qybhqs-chart" id="qybhqs-chart"></div>
-            
+            <button class="chartzoomin" onclick="require('e_Echart').loadBigChart('Left_Second_01')"></button>
         </div>
     </div>
 </div>
