--- a/Lingang.City.Brain/View/Industry/Estate/Right_First_01.html
+++ b/Lingang.City.Brain/View/Industry/Estate/Right_First_01.html
@@ -11,7 +11,7 @@
     <div class="divcont" style="padding-top: .2rem;">
         <div class="chartdiv jyjh-chartdiv">
             <div class="jyjh-chart" id="jyjh-chart"></div>
-            
+            <button class="chartzoomin" onclick="require('e_Echart').loadBigChart('Right_First_01')"></button>
         </div>
     </div>
 </div>
