--- a/Lingang.City.Brain/View/Industry/Estate/Left_Second_02.html
+++ b/Lingang.City.Brain/View/Industry/Estate/Left_Second_02.html
@@ -6,7 +6,7 @@
     <div class="divcont">
         <div class="chartdiv ssbhqs-chartdiv">
             <div class="ssbhqs-chart" id="ssbhqs-chart"></div>
-            <button class="chartzoomin" onclick="require('e_Echart').loadBigChart('Left_Second_02')"></button>
+            <button class="chartzoomin" onclick="require('e_Home').loadBigChart('Left_Second_02')"></button>
         </div>
     </div>
 </div>
