--- a/Lingang.City.Brain/View/Industry/Estate/Left_Second_03.html
+++ b/Lingang.City.Brain/View/Industry/Estate/Left_Second_03.html
@@ -6,7 +6,7 @@
     <div class="divcont">
         <div class="chartdiv gtbhqs-chartdiv">
             <div class="gtbhqs-chart" id="gtbhqs-chart"></div>
-            <button class="chartzoomin" onclick="require('e_Echart').loadBigChart('Left_Second_03')"></button>
+            <button class="chartzoomin" onclick="require('e_Home').loadBigChart('Left_Second_03')"></button>
         </div>
     </div>
 </div>
