--- a/Lingang.City.Brain/View/Industry/Estate/Right_First_02.html
+++ b/Lingang.City.Brain/View/Industry/Estate/Right_First_02.html
@@ -11,7 +11,7 @@
     <div class="divcont" style="padding-top: .2rem;">
         <div class="chartdiv xzsp-chartdiv">
             <div class="xzsp-chart" id="xzsp-chart"></div>
-            <button class="chartzoomin" onclick="require('e_Echart').loadBigChart('Right_First_02')"></button>
+            <button class="chartzoomin" onclick="require('e_Home').loadBigChart('Right_First_02')"></button>
         </div>
     </div>
 </div>
