--- a/Lingang.City.Brain/View/Industry/Estate/Right_First_03.html
+++ b/Lingang.City.Brain/View/Industry/Estate/Right_First_03.html
@@ -12,7 +12,7 @@
     <div class="divcont" style="padding-top: .2rem;">
         <div class="chartdiv gccrc-chartdiv">
             <div class="gccrc-chart" id="gccrc-chart"></div>
-            <button class="chartzoomin" onclick="require('e_Echart').loadBigChart('Right_First_03')"></button>
+            <button class="chartzoomin" onclick="require('e_Home').loadBigChart('Right_First_03')"></button>
         </div>
     </div>
 </div>
