--- a/Lingang.City.Brain/View/Industry/Estate/center_03.html
+++ b/Lingang.City.Brain/View/Industry/Estate/center_03.html
@@ -1,7 +1,7 @@
 ﻿<div class="center-chart" style="z-index:999;">
     <div class="box-top">
         <span id="EbigechartHead">人员车辆统计</span>
-        <button type="button" class="box-close" onclick="require('e_Echart').closeBigChart();"></button>
+        <button type="button" class="box-close" onclick="require('e_Home').closeBigChart();"></button>
     </div>
     <div class="zoomin-chart" id="Ebig-chart">
 
