--- a/Lingang.City.Brain/View/Industry/Garden/Left_Second_02.html
+++ b/Lingang.City.Brain/View/Industry/Garden/Left_Second_02.html
@@ -8,7 +8,7 @@
         </div>
         <div class="chartdiv tcfw-chartdiv" style="height: 4rem;">
             <div class="tcfw-chart" id="tcfw-chart"></div>
-            
         </div>
+        <button class="chartzoomin" onclick="require('g_Home').loadBigChart('Left_Second_02')"></button>
     </div>
 </div>
