--- a/Lingang.City.Brain/View/Industry/Garden/Right_First_02.html
+++ b/Lingang.City.Brain/View/Industry/Garden/Right_First_02.html
@@ -42,8 +42,9 @@
         </div>-->
         <div class="chartdiv zhnh-chartdiv" style="height: 4.3rem; margin-top: .2rem;">
             <div class="zhnh-chart" id="zhnh-chart"></div>
-            
         </div>
+        <button class="chartzoomin" onclick="require('g_Home').loadBigChart('Right_First_02')"></button>
+
         <div class="cy-piebox flex">
             <div class="cy-piediv">
                 <div class="cy-piedata"><span>5,896</span>千瓦</div>
