--- a/Lingang.City.Brain/View/Industry/Garden/Left_Second_03.html
+++ b/Lingang.City.Brain/View/Industry/Garden/Left_Second_03.html
@@ -9,7 +9,7 @@
         </div>
         <div class="chartdiv wrjsjbc-chartdiv" style="height: 4rem;">
             <div class="wrjsjbc-chart" id="wrjsjbc-chart"></div>
-            
         </div>
+        <button class="chartzoomin" onclick="require('g_Home').loadBigChart('Left_Second_03')"></button>
     </div>
 </div>
