添加社区综治图表放大页面

--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventGrid3.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventGrid3.html
@@ -5,6 +5,7 @@
         <div class="czzzbm-l">
             <div class="chartdiv czzzbm-chartdiv">
                 <div class="czzzbm-chart" id="czzzbm-chart"></div>
+                <button class="chartzoomin" onclick="require('s_Echart').loadBigChart('Left_Second_EventGrid3')"></button>
             </div>
             <div class="czzzbm-legendbox">
                 <div class="czzzbm-legend">
