--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventIOT2.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventIOT2.html
@@ -6,7 +6,7 @@
     <div class="divcont">
         <div class="chartdiv sqcl-chartdiv">
             <div class="sqcl-chart" id="sqcl-chart"></div>
-            <button class="chartzoomin"></button>
+            <button class="chartzoomin" onclick="require('s_Echart').loadBigChart('Left_Second_EventIOT2')"></button>
         </div>
     </div>
 </div>
