社区综合窗口关闭交互，景区管理交通仿真窗口交互

--- a/Lingang.City.Brain/View/SocietyNew/Bottom_EventDetailPic.html
+++ b/Lingang.City.Brain/View/SocietyNew/Bottom_EventDetailPic.html
@@ -1,7 +1,7 @@
 ﻿<div class="poiinfo" id="eventdetail" style="z-index:999; position:absolute; left:55%; top:20%; ">
     <div class="box-top" >
         <span id="eventhead">事件005</span>
-        <button type="button" class="box-close" onclick="require('tl_Event').closeDetail()"></button>
+        <button type="button" class="box-close" onclick="require('s_Home').closeDetail();"></button>
     </div>
     <div class="boxcont clearfix" id="eventdetail">
         <div class="box-leftpic fl" style="text-align:center;">
