--- a/Lingang.City.Brain/View/SocietyNew/Bottom_EventDetail.html
+++ b/Lingang.City.Brain/View/SocietyNew/Bottom_EventDetail.html
@@ -1,6 +1,9 @@
 ﻿<!--事件详情-->
 <div id="eventdetail" class="sqzz-sj-poi" style="left:49%;top:22%">
-    <div class="box-top" id="eventhead">事件005</div>
+    <div class="box-top">
+        <span id="eventhead">事件005</span>
+        <button type="button" class="box-close" onclick="require('s_Home').closeDetail();"></button>
+    </div>
     <ul id="ul_eventdetail">
         <li><div>接警时间：</div><span>018-02-02 11:20:10</span></li>
         <li><div><img src="Content/images/sqzz-poi-icon1.png">地址：</div><span>临港家园海事小区  2幢 302</span></li>
