--- a/Lingang.City.Brain/View/TourNew/Bottom_TrafficCamera.html
+++ b/Lingang.City.Brain/View/TourNew/Bottom_TrafficCamera.html
@@ -4,7 +4,7 @@
         <!--<button type="button" class="box-close" onclick="require('tl_TrafficSimulation').closeCameraDetial()"></button>-->
     </div>
     <div class="boxcont flex">
-        <button type="button" class="box-close traffic-close" onclick="require('tl_TrafficSimulation').closeCameraDetial()"></button>
+        <button type="button" class="box-close traffic-close" onclick="require('t_Home').closeCameraDetialTraffic()"></button>
         <button class="traffic-icon"></button>
         <div class="prism-player video-js" id="bottom_cameradetail"></div>
     </div>
