社区综治图表控制

--- a/Lingang.City.Brain/View/SocietyNew/Center_03.html
+++ b/Lingang.City.Brain/View/SocietyNew/Center_03.html
@@ -1,7 +1,7 @@
 ﻿<div class="center-chart" style="z-index:999;">
     <div class="box-top" >
         <span id="bigechartHead">社区车辆</span>
-        <button type="button" class="box-close" onclick="require('s_Echart').closeBigChart();"></button>
+        <button type="button" class="box-close" onclick="require('s_Home').closeBigChart();"></button>
     </div>
     <div class="zoomin-chart" id="Big-chart">
 
