--- a/Lingang.City.Brain/View/SocietyNew/Left_First_03.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_First_03.html
@@ -11,7 +11,7 @@
         </div>
         <div class="wrj-right chartdiv" style="width:46%; height: 2.7rem;">
             <div class="wrj-chart" id="wrj-chart"></div>
-            <button class="chartzoomin" onclick="require('s_Echart').loadBigChart('Left_First_03')" style="top:-.2rem;"></button>
+            <button class="chartzoomin" onclick="require('s_Home').loadBigChart('Left_First_03')" style="top:-.2rem;"></button>
         </div>
     </div>
 </div>
