--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventGrid1.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventGrid1.html
@@ -3,7 +3,7 @@
     <div class="divcont sqzz-wgsj-lr1 flex" style="padding-top: 0;">
         <div class="chartdiv czajsl-chartdiv">
             <div class="czajsl-chart" id="czajsl-chart"></div>
-            <button class="chartzoomin" onclick="require('s_Echart').loadBigChart('Left_Second_EventGrid1')"></button>
+            <button class="chartzoomin" onclick="require('s_Home').loadBigChart('Left_Second_EventGrid1')"></button>
         </div>
     </div>
 </div>
