--- a/Lingang.City.Brain/View/SocietyNew/Right_Second_02.html
+++ b/Lingang.City.Brain/View/SocietyNew/Right_Second_02.html
@@ -12,7 +12,7 @@
     <div class="divcont sjcg" style="padding-top:0;">
         <div class="chartdiv sjcg-chartdiv">
             <div class="sjcg-chart" id="sjcg-chart"></div>
-            <button class="chartzoomin" onclick="require('s_Echart').loadBigChart('Right_Second_02')"></button>
+            <button class="chartzoomin" onclick="require('s_Home').loadBigChart('Right_Second_02')"></button>
         </div>
         <div class="flex sjxx-tab">
             <button type="button" class="active">已处理：<span class="testAerial">21</span></button>
