菜单切换时  放大图表 关闭

--- a/Lingang.City.Brain/View/TourNew/Left_Second_02.html
+++ b/Lingang.City.Brain/View/TourNew/Left_Second_02.html
@@ -30,8 +30,8 @@
                 </div>
             </li>
         </ul>
-        <div class="sxt-videobox dkl-r-sxt-videobox">
-            <ul class="sxt-videoul flex dkl-r-sxtul" style=" margin-top:.4rem;">
+        <div class="sxt-videobox dkl-r-sxt-videobox"  style="margin-top:.4rem;">
+            <ul class="sxt-videoul flex dkl-r-sxtul">
                 <!--<li class="sxt-videoli prism-player" id="left02_video01"></li>
                 <li class="sxt-videoli prism-player" id="left02_video02"></li>-->
                 <li class="sxt-videoli"><div class="sxt-videoli-div prism-player" id="left02_video01"></div></li>
