--- a/Lingang.City.Brain/View/SocietyNew/Left_First_01.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_First_01.html
@@ -3,7 +3,8 @@
     <div class="divcont">
         <ul class="cgq-ul">
             <li class="cgq-li">
-                <div class="item-l testAerial has-num" data-text="1"></div>
+                <!--<div class="item-l testAerial has-num" data-text="1"></div>-->
+                <div class="item-l"></div>
                 <div class="item-r"><div class="item-r-name">烟雾感应</div><div class="item-r-data testAerial" id="cgq-ywgy">480</div></div>
             </li>
             <li class="cgq-li">
@@ -11,7 +12,7 @@
                 <div class="item-r"><div class="item-r-name">智能电梯</div><div class="item-r-data testAerial" id="cgq-zndt">8</div></div>
             </li>
             <li class="cgq-li">
-                <div class="item-l testAerial has-num" data-text="3"></div>
+                <div class="item-l"></div>
                 <div class="item-r"><div class="item-r-name">无线门磁</div><div class="item-r-data testAerial" id="cgq-wxmc">102</div></div>
             </li>
             <li class="cgq-li">
@@ -19,15 +20,15 @@
                 <div class="item-r"><div class="item-r-name">停车地磁</div><div class="item-r-data testAerial" id="cgq-tcdc">6</div></div>
             </li>
             <li class="cgq-li">
-                <div class="item-l testAerial has-num" data-text="88"></div>
+                <div class="item-l"></div>
                 <div class="item-r"><div class="item-r-name">微信开门</div><div class="item-r-data testAerial" id="cgq-wxkm">88</div></div>
             </li>
             <li class="cgq-li">
-                <div class="item-l testAerial has-num" data-text="1"></div>
+                <div class="item-l"></div>
                 <div class="item-r"><div class="item-r-name">电子围栏</div><div class="item-r-data testAerial" id="cgq-dzwl">8</div></div>
             </li>
             <li class="cgq-li">
-                <div class="item-l testAerial has-num" data-text="2"></div>
+                <div class="item-l"></div>
                 <div class="item-r"><div class="item-r-name">智能井盖</div><div class="item-r-data testAerial" id="cgq-znjg">102</div></div>
             </li>
         </ul>
