图表文字修改

--- a/Lingang.City.Brain/View/Industry/Estate/Right_First_03.html
+++ b/Lingang.City.Brain/View/Industry/Estate/Right_First_03.html
@@ -4,9 +4,8 @@
         <div>高层次人才变化趋势</div>
         <div class="charttabbox flex">
             <a class="charttab">按区域</a>
-            <a class="charttab active">按年</a>
-            <a class="charttab">按月</a>
-            <a class="charttab">按日</a>
+            <a class="charttab active">按时间</a>
+            
         </div>
     </h3>
     <div class="divcont" style="padding-top: .2rem;">
