- refine text for drones.

--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventDrone1.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventDrone1.html
@@ -5,15 +5,15 @@
         <ul class="sqrk-ul">
             <li class="sqrk-li">
                 <div class="item-l"><img src="Content/images/sqzz-lr-11.png"></div>
-                <div class="item-r"><div class="item-r-name">巡飞数量（架）</div><div class="item-r-data testAerial">4</div></div>
+                <div class="item-r"><div class="item-r-name">巡飞次数（架）</div><div class="item-r-data testAerial">4</div></div>
             </li>
             <li class="sqrk-li">
                 <div class="item-l"><img src="Content/images/sqzz-lr-12.png"></div>
-                <div class="item-r"><div class="item-r-name">飞次数（次）</div><div class="item-r-data testAerial">106</div></div>
+                <div class="item-r"><div class="item-r-name">巡飞长度（公里）</div><div class="item-r-data testAerial">106</div></div>
             </li>
             <li class="sqrk-li">
                 <div class="item-l"><img src="Content/images/sqzz-lr-13.png"></div>
-                <div class="item-r"><div class="item-r-name">巡飞消失（小时）</div><div class="item-r-data testAerial">256</div></div>
+                <div class="item-r"><div class="item-r-name">巡飞时间（小时）</div><div class="item-r-data testAerial">256</div></div>
             </li>
         </ul>
         <div class="wrj-left">
