--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventWorkSite2.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventWorkSite2.html
@@ -5,19 +5,19 @@
         <ul class="sqrk-ul">
             <li class="sqrk-li">
                 <div class="item-l"><img src="Content/images/sqzz-lr-11.png"></div>
-                <div class="item-r"><div class="item-r-name">巡飞数量（只）</div><div class="item-r-data testAerial">16</div></div>
+                <div class="item-r"><div class="item-r-name">巡飞次数（架）</div><div class="item-r-data testAerial">16</div></div>
             </li>
             <li class="sqrk-li">
                 <div class="item-l"><img src="Content/images/sqzz-lr-12.png"></div>
-                <div class="item-r"><div class="item-r-name">飞次数（次）</div><div class="item-r-data testAerial">16</div></div>
+                <div class="item-r"><div class="item-r-name">发现事件数（个）</div><div class="item-r-data testAerial">16</div></div>
             </li>
             <li class="sqrk-li">
                 <div class="item-l"><img src="Content/images/sqzz-lr-13.png"></div>
-                <div class="item-r"><div class="item-r-name">巡飞消失（小时）</div><div class="item-r-data testAerial">256</div></div>
+                <div class="item-r"><div class="item-r-name">累计巡飞时间（小时）</div><div class="item-r-data testAerial">256</div></div>
             </li>
             <li class="sqrk-li">
                 <div class="item-l"><img src="Content/images/sqzz-lr-14.png"></div>
-                <div class="item-r"><div class="item-r-name">工地巡查面积</div><div class="item-r-data testAerial">89</div></div>
+                <div class="item-r"><div class="item-r-name">工地巡查面积（平方公里）</div><div class="item-r-data testAerial">89</div></div>
             </li>
         </ul>
         <div class="wrj-left">
