--- a/Lingang.City.Brain/View/SocietyNew/Left_First_04.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_First_04.html
@@ -1,8 +1,8 @@
-﻿<!-- 处置单位列表 -->
+﻿<!-- 主责部门 -->
 <div id="left01_04" class="divbox divbox-ll clearfix" style="top:16rem; margin-bottom: 0;z-index:990;display:block;">
     <h3><div>主责部门</div></h3>
     <div class="divcont">
-        <table cellpadding="0" cellspacing="0" class="table czdw-table">
+        <table cellpadding="0" cellspacing="0" class="table czdw-table" id="zzbm-table">
             <thead>
                 <tr>
                     <td>主责部门</td>
