社区综治  数据导入

--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventGrid3.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventGrid3.html
@@ -8,19 +8,19 @@
                 <button class="chartzoomin" onclick="require('s_Home').loadBigChart('Left_Second_EventGrid3')"></button>
             </div>
             <div class="czzzbm-legendbox">
-                <div class="czzzbm-legend">
-                    <div class="czzzbm-legendtitle"><span>TOP15</span><em>(88%)</em></div>
-                    <div class="czzzbm-legenddata testAerial">20399</div>
+                <div class="czzzbm-legend" id="zzbm-top15">
+                    <!--<div class="czzzbm-legendtitle"><span>TOP15</span><em>(88%)</em></div>
+                    <div class="czzzbm-legenddata testAerial">20399</div>-->
                 </div>
-                <div class="czzzbm-legend">
-                    <div class="czzzbm-legendtitle"><span>其他</span><em>(12%)</em></div>
-                    <div class="czzzbm-legenddata testAerial">2747</div>
+                <div class="czzzbm-legend" id="zzbm-else">
+                    <!--<div class="czzzbm-legendtitle"><span>其他</span><em>(12%)</em></div>
+                    <div class="czzzbm-legenddata testAerial">2747</div>-->
                 </div>
             </div>
         </div>
         <div class="czzzbm-r">
-            <ul class="czzzbm-list scrolldiv">
-                <li><span>临港集团</span><em>3332</em></li>
+            <ul class="czzzbm-list scrolldiv" id="grid-czzzbm">
+                <!--<li><span>临港集团</span><em>3332</em></li>
                 <li><span>芦潮港城管（街镇）</span><em>2559</em></li>
                 <li><span>浦东网格中心</span><em>1896</em></li>
                 <li><span>城发公司</span><em>1603</em></li>
@@ -31,7 +31,7 @@
                 <li><span>南汇新城非联网单位</span><em>725</em></li>
                 <li><span>宏南养护</span><em>711</em></li>
                 <li><span>申港社区平台部门</span><em>648</em></li>
-                <li><span>芦潮港社区平台部门</span><em>417</em></li>
+                <li><span>芦潮港社区平台部门</span><em>417</em></li>-->
             </ul>
         </div>
     </div>
