--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventIOT4.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventIOT4.html
@@ -4,8 +4,8 @@
     <div class="divcont">
         <ul class="iot-ul" id="society-iot">
             <li class="iot-li">
-                <div class="item-l"><div class="item-l-name">烟感感应</div><div class="item-l-data testAerial" id="iot-total1">480</div></div>
-                <div class="item-r">正常：<span class="testAerial" id="iot-normal1">479</span>异常：<span class="testAerial" id="iot-false1">1</span></div>
+                <div class="item-l"><div class="item-l-name">烟感感应</div><div class="item-l-data testAerial">480</div></div>
+                <div class="item-r">正常：<span class="testAerial">479</span>异常：<span class="testAerial">1</span></div>
             </li>
             <li class="iot-li">
                 <div class="item-l"><div class="item-l-name">智能井盖</div><div class="item-l-data testAerial">102</div></div>
