--- a/Lingang.City.Brain/View/SocietyNew/Left_First_04.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_First_04.html
@@ -1,7 +1,7 @@
 ﻿<!-- 主责部门 -->
 <div id="left01_04" class="divbox divbox-ll clearfix" style="top:16rem; margin-bottom: 0;z-index:990;display:block;">
     <h3><div>主责部门</div></h3>
-    <div class="divcont">
+    <div class="divcont scrolldiv"  style="height: 5rem; padding-top:0;">
         <table cellpadding="0" cellspacing="0" class="table czdw-table" id="zzbm-table">
             <thead>
                 <tr>
@@ -10,8 +10,8 @@
                     <td>数量</td>
                 </tr>
             </thead>
-            <tbody>
-                <tr>
+            <tbody id="zzbm-tbody">
+                <!--<tr>
                     <td>南汇新城镇</td>
                     <td>乱涂写、乱张贴、乱刻画</td>
                     <td>22,335</td>
@@ -50,7 +50,7 @@
                     <td>南汇新城非联网单位</td>
                     <td>架空线坠落、乱设</td>
                     <td>74</td>
-                </tr>
+                </tr>-->
             </tbody>
         </table>
     </div>
