--- a/Lingang.City.Brain/View/SocietyNew/Right_Second_01.html
+++ b/Lingang.City.Brain/View/SocietyNew/Right_Second_01.html
@@ -6,22 +6,22 @@
             <li class="sj-li">
                 <div class="sj-div"></div>
                 <div class="sj-title"><div>累计节省时间</div><span>（案件数量*节省分钟数）</span></div>
-                <div class="sj-data testAerial">2160*35′</div>
+                <div class="sj-data testAerial" id="sj-saveTime">2160*35′</div>
             </li>
             <li class="sj-li">
                 <div class="sj-div"></div>
                 <div class="sj-title">智能发现事件数量累计</div>
-                <div class="sj-data testAerial">2160</div>
+                <div class="sj-data testAerial" id="sj-eventCounts">2160</div>
             </li>
             <li class="sj-li">
                 <div class="sj-div"></div>
                 <div class="sj-title">智能发现自动化率</div>
-                <div class="sj-data testAerial">35%</div>
+                <div class="sj-data testAerial" id="sj-autoRate">35%</div>
             </li>
             <li class="sj-li">
                 <div class="sj-div"></div>
                 <div class="sj-title">智能派单准确率超过</div>
-                <div class="sj-data testAerial">80%</div>
+                <div class="sj-data testAerial" id="sj-accuracyRate">80%</div>
             </li>
         </ul>
     </div>
