--- a/Lingang.City.Brain/View/SocietyNew/Right_Second_02.html
+++ b/Lingang.City.Brain/View/SocietyNew/Right_Second_02.html
@@ -1,12 +1,11 @@
 ﻿<!-- 事件处理成功数据 -->
-<div id="right02_02" class="divbox divbox-rr clearfix" style="top:7.5rem; margin-bottom: 0;z-index:999;display:block;">
+<div id="right02_02" class="divbox divbox-rr clearfix" style="top:7.5rem;  margin-bottom: 0;z-index:999;display:block;">
     <!--  头部有图标tab时， 添加hastabbox-->
     <h3 class="hastabbox">
         <div>事件处理成功数</div>
         <div class="charttabbox flex">
-            <a class="charttab">按年</a>
-            <a class="charttab active">按月</a>
-            <a class="charttab">按日</a>
+            <a class="charttab active">事件成功数</a>
+            <a class="charttab">事件成功率</a>
         </div>
     </h3>
     <div class="divcont sjcg" style="padding-top:0;">
