--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventDrone3.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventDrone3.html
@@ -2,96 +2,15 @@
 <div id="left02_03" class="divbox divbox-lr" style="top: 13.5rem;z-index:999;display:block;">
     <h3><div>巡查员信息</div></h3>
     <div class="divcont sqzz-wrj-lr3">
-        <div class="sqzz-wrj-lr3-uldiv scrolldiv">
-            <ul class="sqzz-xcyxx-ul">
-                <li class="sqzz-xcyxx-li">
+        <div class="sqzz-wrj-lr3-uldiv scrolldiv" >
+            <ul class="sqzz-xcyxx-ul clearfix" id="drone-xcy">
+                <!--<li class="sqzz-xcyxx-li">
                     <div class="item-l"><img src="Content/images/yangyufeng.jpg" style="width: 112px; height: 150px;"></div>
                     <div class="item-r">
                         <ul class="sqzz-xcyxx-liul">
                             <li><div>接单员：</div><span>杨育峰</span></li>
                             <li><div>性&nbsp;别：</div><span>男</span></li>
                             <li><div>职&nbsp;位：</div><span>组长</span></li>
-                        </ul>
-                    </div>
-                </li>
-                <li class="sqzz-xcyxx-li">
-                    <div class="item-l"><img src="Content/images/zhouyong.jpg" style="width: 112px; height: 150px;"></div>
-                    <div class="item-r">
-                        <ul class="sqzz-xcyxx-liul">
-                            <li><div>接单员：</div><span>周勇</span></li>
-                            <li><div>性&nbsp;别：</div><span>男</span></li>
-                            <li><div>职&nbsp;位：</div><span>组员</span></li>
-                        </ul>
-                    </div>
-                </li>
-                <li class="sqzz-xcyxx-li">
-                    <div class="item-l"><img src="Content/images/fanhuanhuan.jpg" style="width: 112px; height: 150px;"></div>
-                    <div class="item-r">
-                        <ul class="sqzz-xcyxx-liul">
-                            <li><div>接单员：</div><span>范欢欢</span></li>
-                            <li><div>性&nbsp;别：</div><span>女</span></li>
-                            <li><div>职&nbsp;位：</div><span>组长</span></li>
-                        </ul>
-                    </div>
-                </li>
-                <li class="sqzz-xcyxx-li">
-                    <div class="item-l"><img src="Content/images/wuchunli.jpg" style="width: 112px; height: 150px;"></div>
-                    <div class="item-r">
-                        <ul class="sqzz-xcyxx-liul">
-                            <li><div>接单员：</div><span>吴春丽</span></li>
-                            <li><div>性&nbsp;别：</div><span>女</span></li>
-                            <li><div>职&nbsp;位：</div><span>组员</span></li>
-                        </ul>
-                    </div>
-                </li>
-                <li class="sqzz-xcyxx-li">
-                    <div class="item-l"><img src="Content/images/sunxiaohong.jpg" style="width: 112px; height: 150px;"></div>
-                    <div class="item-r">
-                        <ul class="sqzz-xcyxx-liul">
-                            <li><div>接单员：</div><span>孙小红</span></li>
-                            <li><div>性&nbsp;别：</div><span>女</span></li>
-                            <li><div>职&nbsp;位：</div><span>组长</span></li>
-                        </ul>
-                    </div>
-                </li>
-                <li class="sqzz-xcyxx-li">
-                    <div class="item-l"><img src="Content/images/kanghongxia.jpg" style="width: 112px; height: 150px;"></div>
-                    <div class="item-r">
-                        <ul class="sqzz-xcyxx-liul">
-                            <li><div>接单员：</div><span>康红霞</span></li>
-                            <li><div>性&nbsp;别：</div><span>女</span></li>
-                            <li><div>职&nbsp;位：</div><span>组员</span></li>
-                        </ul>
-                    </div>
-                </li>
-                <li class="sqzz-xcyxx-li">
-                    <div class="item-l"><img src="Content/images/huanghaiyu.jpg" style="width: 112px; height: 150px;"></div>
-                    <div class="item-r">
-                        <ul class="sqzz-xcyxx-liul">
-                            <li><div>接单员：</div><span>黄海玉</span></li>
-                            <li><div>性&nbsp;别：</div><span>女</span></li>
-                            <li><div>职&nbsp;位：</div><span>组长</span></li>
-                        </ul>
-                    </div>
-                </li>
-                <li class="sqzz-xcyxx-li">
-                    <div class="item-l"><img src="Content/images/yuanchengxiang.jpg" style="width: 112px; height: 150px;"></div>
-                    <div class="item-r">
-                        <ul class="sqzz-xcyxx-liul">
-                            <li><div>接单员：</div><span>袁承相</span></li>
-                            <li><div>性&nbsp;别：</div><span>男</span></li>
-                            <li><div>职&nbsp;位：</div><span>组员</span></li>
-                        </ul>
-                    </div>
-                </li>
-                <!--
-                <li class="sqzz-xcyxx-li">
-                    <div class="item-l"><img src="Content/images/sqzz-lr-31.png"></div>
-                    <div class="item-r">
-                        <ul class="sqzz-xcyxx-liul">
-                            <li><div>接单员：</div><span>于文龙</span></li>
-                            <li><div>性&nbsp;别：</div><span>男</span></li>
-                            <li><div>职&nbsp;位：</div><span>士官</span></li>
                         </ul>
                     </div>
                 </li>-->
