--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventWorkSite4.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventWorkSite4.html
@@ -3,8 +3,8 @@
     <h3><div>巡查员信息</div></h3>
     <div class="divcont sqzz-wrj-lr3">
         <div class="sqzz-wrj-lr3-uldiv scrolldiv" style="max-height: 3.8rem;">
-            <ul class="sqzz-xcyxx-ul">
-                <li class="sqzz-xcyxx-li">
+            <ul class="sqzz-xcyxx-ul clearfix" id="worksite-xcy">
+                <!--<li class="sqzz-xcyxx-li">
                     <div class="item-l"><img src="Content/images/sqzz-lr-31.png" style="width:1.4rem !important;"></div>
                     <div class="item-r">
                         <ul class="sqzz-xcyxx-liul">
@@ -13,87 +13,7 @@
                             <li><div>职&nbsp;位：</div><span>士官</span></li>
                         </ul>
                     </div>
-                </li>
-                <li class="sqzz-xcyxx-li">
-                    <div class="item-l"><img src="Content/images/sqzz-lr-31.png" style="width:1.4rem !important;"></div>
-                    <div class="item-r">
-                        <ul class="sqzz-xcyxx-liul">
-                            <li><div>接单员：</div><span>于文龙</span></li>
-                            <li><div>性&nbsp;别：</div><span>男</span></li>
-                            <li><div>职&nbsp;位：</div><span>士官</span></li>
-                        </ul>
-                    </div>
-                </li>
-                <li class="sqzz-xcyxx-li">
-                    <div class="item-l"><img src="Content/images/sqzz-lr-31.png" style="width:1.4rem !important;"></div>
-                    <div class="item-r">
-                        <ul class="sqzz-xcyxx-liul">
-                            <li><div>接单员：</div><span>于文龙</span></li>
-                            <li><div>性&nbsp;别：</div><span>男</span></li>
-                            <li><div>职&nbsp;位：</div><span>士官</span></li>
-                        </ul>
-                    </div>
-                </li>
-                <li class="sqzz-xcyxx-li">
-                    <div class="item-l"><img src="Content/images/sqzz-lr-31.png" style="width:1.4rem !important;"></div>
-                    <div class="item-r">
-                        <ul class="sqzz-xcyxx-liul">
-                            <li><div>接单员：</div><span>于文龙</span></li>
-                            <li><div>性&nbsp;别：</div><span>男</span></li>
-                            <li><div>职&nbsp;位：</div><span>士官</span></li>
-                        </ul>
-                    </div>
-                </li>
-                <li class="sqzz-xcyxx-li">
-                    <div class="item-l"><img src="Content/images/sqzz-lr-31.png" style="width:1.4rem !important;"></div>
-                    <div class="item-r">
-                        <ul class="sqzz-xcyxx-liul">
-                            <li><div>接单员：</div><span>于文龙</span></li>
-                            <li><div>性&nbsp;别：</div><span>男</span></li>
-                            <li><div>职&nbsp;位：</div><span>士官</span></li>
-                        </ul>
-                    </div>
-                </li>
-                <li class="sqzz-xcyxx-li">
-                    <div class="item-l"><img src="Content/images/sqzz-lr-31.png" style="width:1.4rem !important;"></div>
-                    <div class="item-r">
-                        <ul class="sqzz-xcyxx-liul">
-                            <li><div>接单员：</div><span>于文龙</span></li>
-                            <li><div>性&nbsp;别：</div><span>男</span></li>
-                            <li><div>职&nbsp;位：</div><span>士官</span></li>
-                        </ul>
-                    </div>
-                </li>
-                <li class="sqzz-xcyxx-li">
-                    <div class="item-l"><img src="Content/images/sqzz-lr-31.png" style="width:1.4rem !important;"></div>
-                    <div class="item-r">
-                        <ul class="sqzz-xcyxx-liul">
-                            <li><div>接单员：</div><span>于文龙</span></li>
-                            <li><div>性&nbsp;别：</div><span>男</span></li>
-                            <li><div>职&nbsp;位：</div><span>士官</span></li>
-                        </ul>
-                    </div>
-                </li>
-                <li class="sqzz-xcyxx-li">
-                    <div class="item-l"><img src="Content/images/sqzz-lr-31.png" style="width:1.4rem !important;"></div>
-                    <div class="item-r">
-                        <ul class="sqzz-xcyxx-liul">
-                            <li><div>接单员：</div><span>于文龙</span></li>
-                            <li><div>性&nbsp;别：</div><span>男</span></li>
-                            <li><div>职&nbsp;位：</div><span>士官</span></li>
-                        </ul>
-                    </div>
-                </li>
-                <li class="sqzz-xcyxx-li">
-                    <div class="item-l"><img src="Content/images/sqzz-lr-31.png" style="width:1.4rem !important;"></div>
-                    <div class="item-r">
-                        <ul class="sqzz-xcyxx-liul">
-                            <li><div>接单员：</div><span>于文龙</span></li>
-                            <li><div>性&nbsp;别：</div><span>男</span></li>
-                            <li><div>职&nbsp;位：</div><span>士官</span></li>
-                        </ul>
-                    </div>
-                </li>
+                </li>-->
             </ul>
         </div>
     </div>
