--- a/Lingang.City.Brain/View/SocietyNew/Right_Second_02.html
+++ b/Lingang.City.Brain/View/SocietyNew/Right_Second_02.html
@@ -3,7 +3,7 @@
     <!--  头部有图标tab时， 添加hastabbox-->
     <h3 class="hastabbox">
         <div>事件处理成功数</div>
-        <div class="charttabbox flex">
+        <div class="charttabbox flex" id="sjcg-charttab">
             <a class="charttab active">事件成功数</a>
             <a class="charttab">事件成功率</a>
         </div>
