--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventIOT3.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventIOT3.html
@@ -3,7 +3,7 @@
     <h3><div>摄像头</div></h3>
     <div class="divcont">
         <ul class="flex sxt-ul">
-            <li class="sxt-li sxt-li4">
+            <li class="sxt-li sxt-li4" id="iot-sxt1">
                 <div class="sxt-circlediv flex"></div>
                 <div class="sxt-circleinfo">
                     <div class=""><span>总数：</span><em class="testAerial">468</em></div>
@@ -11,7 +11,7 @@
                     <div class=""><span>故障：</span><em class="testAerial">9</em></div>
                 </div>
             </li>
-            <li class="sxt-li sxt-li5">
+            <li class="sxt-li sxt-li5" id="iot-sxt2">
                 <div class="sxt-circlediv flex"></div>
                 <div class="sxt-circleinfo">
                     <div class=""><span>车辆：</span><em class="testAerial">442</em></div>
@@ -19,7 +19,7 @@
                     <div class=""><span>违规：</span><em class="testAerial">7</em></div>
                 </div>
             </li>
-            <li class="sxt-li sxt-li6">
+            <li class="sxt-li sxt-li6" id="iot-sxt3">
                 <div class="sxt-circlediv flex"></div>
                 <div class="sxt-circleinfo">
                     <div class=""><span>人员：</span><em class="testAerial">663</em></div>
