--- a/Lingang.City.Brain/View/SocietyNew/Right_Second_02.html
+++ b/Lingang.City.Brain/View/SocietyNew/Right_Second_02.html
@@ -5,7 +5,7 @@
         <div>事件处理成功数</div>
         <div class="charttabbox flex" id="sjcg-charttab">
             <a class="charttab active">事件成功数</a>
-            <a class="charttab">事件成功率</a>
+            <a class="charttab">事件成功率(%)</a>
         </div>
     </h3>
     <div class="divcont sjcg" style="padding-top:0;">
