--- a/Lingang.City.Brain/View/SocietyNew/Bottom_EventDetailPic.html
+++ b/Lingang.City.Brain/View/SocietyNew/Bottom_EventDetailPic.html
@@ -1,4 +1,4 @@
-﻿<div class="poiinfo" id="eventdetail" style="z-index:999; position:absolute; left:55%; top:20%; ">
+﻿<div class="poiinfo" id="div_eventdetail" style="z-index:999; position:absolute; left:55%; top:20%; ">
     <div class="box-top" >
         <span id="eventhead">事件005</span>
         <button type="button" class="box-close" onclick="require('s_Home').closeDetail();"></button>
