--- a/Lingang.City.Brain/View/Industry/Garden/Left_First_01.html
+++ b/Lingang.City.Brain/View/Industry/Garden/Left_First_01.html
@@ -7,41 +7,41 @@
         <div class="chartdiv zsld-chartdiv" style="height: 4rem;">
             <div class="zsld-chart" id="zsld-chart"></div>
             
-            <ul class="legend-list zsld-legend-list ">
-                <li class="">节能环保产业</li>
-                <li class="">高端装备铸造产业</li>
+            <ul class="legend-list zsld-legend-list" id="zsld-legend">
+                <li class="">相关服务产业</li>
                 <li class="">新能源产业</li>
+                <li class="">新能源汽车</li>
+                <li class="">生物产业</li>
+                <li class="">高端装备制造产业</li>
+                <li class="">信息技术产业</li>
+                <li class="">节能环保产业</li>
                 <li class="">数字创意产业</li>
                 <li class="">新材料产业</li>
-                <li class="">新能源汽车产业</li>
-                <li class="">新一代信息技术产业</li>
-                <li class="">生物产业</li>
-                <li class="">相关服务业</li>
             </ul>
 
 
         </div>
         <div class="zsld-div" id="zsld">
-            <div class="zsld-result">产业聚集地</div>
+            <!--<div class="zsld-result">产业聚集地</div>
             <ul class="zsld-ul">
-                <li class="zsld-li clearfix"><span>苏州</span><div class="zsld-bar"><div data-text="26589"></div></div></li>
+                <li class="zsld-li clearfix"><span>上海市</span><div class="zsld-bar"><div data-text="26589"></div></div></li>
                 <li class="zsld-li clearfix"><span>东莞</span><div class="zsld-bar"><div data-text="26589"></div></div></li>
                 <li class="zsld-li clearfix"><span>长春</span><div class="zsld-bar"><div data-text="26589"></div></div></li>
             </ul>
             <div class="zsld-company flex">
-                <dl class="zsld-dl">
+                <dl class="zsld-dl" id="zsld-cymx">
                     <dt class="">产业明星企业</dt>
                     <dd class="">深圳佳顺科技有限公司</dd>
                     <dd class="">广东嘉腾机器人有限公司</dd>
                     <dd class="">云南昆船智能装备公司</dd>
                 </dl>
-                <dl class="zsld-dl">
+                <dl class="zsld-dl"  id="zsld-zytzjg">
                     <dt class="">产业主要投资机构</dt>
                     <dd class="">深圳佳顺科技有限公司</dd>
                     <dd class="">广东嘉腾机器人有限公司</dd>
                     <dd class="">云南昆船智能装备公司</dd>
                 </dl>
-            </div>
+            </div>-->
         </div>
     </div>
 </div>
