--- a/Lingang.City.Brain/Content/styleNew.css
+++ b/Lingang.City.Brain/Content/styleNew.css
@@ -3374,12 +3374,22 @@ dd.pjc-statistic-star >form{
 	color:#edaf07;
 }
 .loudong-div{
+    position:relative;
 	width: 100%;
 	padding: .2rem .45rem;
 	border-radius: .1rem;
 	background: rgba(0, 38, 147, 0.3);
 	box-shadow: inset 0px 0px 0.2rem rgba(20,154,239,0.75);
 	box-sizing: border-box;
+}
+.loudong-div > .box-close {
+    top: 0px; 
+    width: 0.6rem; 
+    height: 0.6rem; 
+    right: 0px; 
+    box-shadow: inset 0px 0px 0.2rem rgba(20,154,239,0.75); 
+    transform: translateX(100%); background-size: 0.3rem;
+    
 }
 .loudong-li{
 	overflow: hidden;
